# fastapi_sqlachemy2_async

./: .env.template  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: c5965229defb_adding_user_model.py  de0eebb699a0_convert_users_to_organizations.py
app/: config.py  main.py
app/organizations/: dependencies.py  models.py  routes.py  schemas.py  views.py
app/services/: database.py  exceptions.py  utils.py
app/templates/components/: navbar.html
app/templates/organizations/: form.html  list.html
app/templates/shared/: base.html
app/templates/users/: form.html  list.html
app/users/: dependencies.py  models.py  routes.py  schemas.py  views.py
requirements/: base.txt  dev.txt
tests/: conftest.py  fixtures.py  test_healthcheck.py
tests/organizations/: test_dependencies.py  test_models.py  test_routes.py  test_views.py
tests/services/: test_utils.py
tests/users/: test_dependencies.py  test_models.py  test_routes.py  test_views.py
